results/SVCOMP/conversational/log-URLDecoder01-2024_03_18_00_22_30.txt
public class Main {
    //@ requires arg != null;
    //@ ensures \result ==> \result == true && \result == false;
    public static boolean f(String arg) {
        String s1 = "some-url+" + arg;
        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder01.java:1: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

// JML specifications cannot be directly added to the main method.
// Therefore, the JML specifications are added to the class level.

public class Main {
    //@ requires arg != null;
    //@ ensures \result ==> \result == true && \result == false;
    
    public static boolean f(String arg) {
        String s1 = "some-url+" + arg;
        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder01.java:4: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

// JML specifications cannot be directly added to the main method.
// Therefore, the JML specifications are added to the class level.

// File name should be Main.java

public class Main {
    //@ requires arg != null;
    //@ ensures \result ==> \result == true && \result == false;
    
    public static boolean f(String arg) {
        String s1 = "some-url+" + arg;
        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder01.java:6: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

// JML specifications cannot be directly added to the main method.
// Therefore, the JML specifications are added to the class level.

public class Main {
    //@ requires arg != null;
    //@ ensures \result ==> \result == true && \result == false;
    
    public static boolean f(String arg) {
        String s1 = "some-url+" + arg;
        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder01.java:4: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

// JML specifications cannot be directly added to the main method.
// Therefore, the JML specifications are added to the class level.

// File name should be Main.java

public class Main {
    //@ requires arg != null;
    //@ ensures \result ==> \result == true && \result == false;
    
    public static boolean f(String arg) {
        String s1 = "some-url+" + arg;
        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder01.java:6: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

// JML specifications cannot be directly added to the main method.
// Therefore, the JML specifications are added to the class level.

public class Main {
    //@ requires arg != null;
    //@ ensures \result ==> \result == true && \result == false;
    
    public static boolean f(String arg) {
        String s1 = "some-url+" + arg;
        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder01.java:4: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

// JML specifications cannot be directly added to the main method.
// Therefore, the JML specifications are added to the class level.

// File name should be Main.java

public class Main {
    //@ requires arg != null;
    //@ ensures \result ==> \result == true && \result == false;
    
    public static boolean f(String arg) {
        String s1 = "some-url+" + arg;
        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder01.java:6: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

// JML specifications cannot be directly added to the main method.
// Therefore, the JML specifications are added to the class level.

public class Main {
    //@ requires arg != null;
    //@ ensures \result ==> \result == true && \result == false;
    
    public static boolean f(String arg) {
        String s1 = "some-url+" + arg;
        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder01.java:4: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

// JML specifications cannot be directly added to the main method.
// Therefore, the JML specifications are added to the class level.

// File name should be Main.java

public class Main {
    //@ requires arg != null;
    //@ ensures \result ==> \result == true && \result == false;
    
    public static boolean f(String arg) {
        String s1 = "some-url+" + arg;
        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder01.java:6: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

// JML specifications cannot be directly added to the main method.
// Therefore, the JML specifications are added to the class level.

public class Main {
    //@ requires arg != null;
    //@ ensures \result ==> \result == true && \result == false;
    
    public static boolean f(String arg) {
        String s1 = "some-url+" + arg;
        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder01.java:4: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

